<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.presentation.fragments.RegistrationFragment">

    <com.example.tmsandroid.app.presentation.custom.SmileView
        android:id="@+id/emotionalFaceView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/loginInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerInParent="true">
    </com.example.tmsandroid.app.presentation.custom.SmileView>

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="Login:"
        android:hint="@string/login_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="241dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        tools:ignore="Autofill,HardcodedText,TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:background="@color/BlueGrey"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>